@@ -44,9 +44,7 @@
         <artifactId>KShortestPathsFork</artifactId>
         <version>1.0</version>
     </dependency>
-	
 
-	
 	
 	
 	
@@ -84,6 +82,15 @@
 			<groupId>net.imagej</groupId>
 			<artifactId>ij</artifactId>
 			<version>1.54p</version>
+		</dependency>
+		
+		
+		<!--  Test scope dependencies  -->
+		<dependency>
+			<groupId>org.junit.jupiter</>
+			<artifactId>junit-jupiter</artifactId>
+			<version>5.10.1</version>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>io.github.kostaskougios</groupId>
@@ -167,16 +174,7 @@
         </plugin>
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
-          <version>2.22.1</version>
-           <configuration>
-                <skipTests>true</skipTests>
-                <argLine>
-                	--add-opens java.base/java.lang=ALL-UNNAMED
-                    --add-opens java.base/java.time=ALL-UNNAMED
-					--add-opens java.base/java.time.format=ALL-UNNAMED
-                    --add-opens java.base/java.util=ALL-UNNAMED
-				</argLine>
-            </configuration>
+          <version>3.2.5</version>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
